--- a/food-crossroads/src/css/shoppingchar.css
+++ b/food-crossroads/src/css/shoppingchar.css
@@ -290,9 +290,9 @@ position: relative;
 /* 手機 */
 
 @media screen and (max-width:576px) {
-  #shopping {
+  /* #shopping {
       display: none;
-  }
+  } */
   #mobile_shopping {
       all: unset;
   }
