--- a/food-crossroads/src/css/shoppingchar.css
+++ b/food-crossroads/src/css/shoppingchar.css
@@ -204,7 +204,7 @@ position: relative;
   display: block;
 }
 
-.modal-body{
+#shoppingchar_modal .modal-body{
   display: flex;
   justify-content: space-around;
 }
